--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@libsql/client": "^0.17.0",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "drizzle-orm": "^0.45.1",
-    "html5-qrcode": "^2.3.8",
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
