--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@libsql/client": "^0.17.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
+    "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "next": "^14.2.0",
     "react": "^18.3.1",
