--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "drizzle-orm": "^0.45.1",
     "next": "^14.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swr": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
